--- a/udonation/.classpath
+++ b/udonation/.classpath
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
+	<classpathentry kind="lib" path="C:/Users/Asus/OneDrive/Desktop/jdbc/jstl.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Asus/OneDrive/Desktop/jdbc/postgresql-42.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Asus/OneDrive/Desktop/jdbc/standard.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0 ">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
+			<attribute name="owner.project.facets" value="jst.web;#system#"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
